--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     "
@@ -14,7 +15,7 @@
         <h6> Select the Size</h6>
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
-    <div class="container"></div>
+    <div class="board"></div>
     <div class="footer">
         <button class="btn btn-dark">Black</button>
         <button class="btn btn-warning">Random </button>
